--- a/css/subgroups.main.css
+++ b/css/subgroups.main.css
@@ -46,23 +46,24 @@ a:hover {
 */
 .vert-nav{
   position: fixed;
-  top: 80px;
-  right: 180px;
+  top: 300px;
+  right: 400px;
 }
 .vert-nav li{
   padding: 5px 0 5px 30px;
   border-left: solid 1px transparent;
 }
 .vert-nav li:hover{
-  border-left: solid 1px #e3722e;
+  border-left: solid 1px #483D8B;
 }
 .vert-nav li:hover a,.vert-nav li.current a{
-  color: #e3722e;
+  color: #483D8B;
 }
 .vert-nav li.current{
-  color: #e3722e;
-  border-left: solid 2px #e3722e;
+  color: #483D8B;
+  border-left: solid 2px #483D8B;
   padding: 5px 0 5px 29px;
+  font-weight: bold;
 }
 .vert-nav li a{
   color: #333;
@@ -70,140 +71,24 @@ a:hover {
 .vert-nav li a:hover{
   text-decoration: none;
 }
-/*头部*/
-.header-home .header-sign,.m-header-home .m-header-sign{
-	width: 100%;
-	background: #e3722e;
-  color: white;
-  padding: 12px 0;
+.highlight {
+    background-color: #f7f7f9;
+    border: 1px solid #e1e1e8;
+    border-radius: 4px;
+    margin-bottom: 14px;
+    padding: 9px 14px;
 }
-.header-home .header-sign span{
+pre {
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    color: #333;
+    display: block;
+    font-size: 13px;
+    line-height: 1.42857;
+    margin: 0 0 10px;
+    padding: 9.5px;
+    word-break: break-all;
+    word-wrap: break-word;
 }
-.header-home .header-sign i{
-	margin: 0 8px;
-}
-.header-home .header-sign .header-sign-left{
-	line-height: 32px;
-}
-.header-home .header-sign .header-sign-right li,.m-header-home .m-header-sign .m-header-sign-right li{
-	display: inline-block;
-}
-.header-home .header-sign .header-sign-right li a,.m-header-home .m-header-sign .m-header-sign-right li a{
-	display: block;
-	color: #FFF;
-  width: 32px;
-  height: 32px;
-  text-align: center;
-  line-height: 32px;
-  border: 1px solid #FFF;
-  border-radius: 50%;
-  margin: 0px 5px;
-}
-.header-home .header-sign .header-sign-right li a:hover,.m-header-home .m-header-sign .m-header-sign-right li a:hover{
-	background: white;
-	color: #e3722e;
-}
-.header-home .header-main{
-  width: 100%;
-  z-index: 9999;
-  padding: 50px 0px;
-  background: #FFF none repeat scroll 0% 0%;
-  box-shadow: 0px 2px 4px rgba(1, 1, 1, 0.15);
-  transition: all 0.4s ease-in-out 0s;
-  filter:alpha(opacity=100); 
-  -moz-opacity:1; 
-  opacity:1;
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-}
-.header-home .header-main-shrink{
-	padding: 25px 0;
-	top:0;
-	filter:alpha(opacity=80); 
-  -moz-opacity:0.8; 
-  opacity:0.8;
-}
-.header-home .header-main .header-menu li{
-	display: inline-block;
-	margin: 0 5px;
-}
-.header-home .header-main .header-menu a{
-	padding: 10px 15px;
-	border-radius: 3px;
-	color: #777;
-}
-.header-home .header-main .header-menu .current a{
-	background: #e3722e;
-	color: #fff;
-}
-/*banner*/
-.banner{
-  width: 100%;
-  max-width: 100%;
-  min-width: 100%;
-  overflow: hidden;
-}
-.banner img{
-	width: 100%;
-	display: block;
-}
-/*mainbody*/
-.mainbody{
-  padding: 0 15px;
-}
-.mainbody .title{
-  margin-bottom: 25px;
-}
-.mainbody .title i{
-  display: inline-block;
-  color: #e3722e;
-  font-size: 20px;
-  font-weight: 900;
-}
-/*关于我们*/
-#aboutus .aboutus-subtitle{
-  margin-bottom: 20px;
-}
-#aboutus .aboutus-subtitle i{
-  font-size: 30px;
-  color: #e3722e;
-  margin-right: 25px;
-}
-#aboutus .aboutus-subtitle h3{
-  vertical-align: top;
-  font-size: 18px;
-  display: inline-block;
-  margin: 0;
-  line-height: 31px;
-}
-#aboutus .aboutus-content p{
-  color: #777;
-}
-/*最新产品*/
-.backround-base{
-  background: #333;
-}
-/*#newest-product .overlay i{
-  display: inline-block;
-  color: #FFF;
-  width: 25px;
-  height: 25px;
-  text-align: center;
-  line-height: 25px;
-  border: 1px solid #FFF;
-  border-radius: 50%;
-  margin: 5px;
-}*/
-/*热门推荐*/
-h3.hots-subtitle{
-  color: #e3722e;
-}
-/*footer*/
-.footer{
-  background: #080808;
-  padding: 20px 0;
-  color: white;
-  font-size: 12px;
-}
+
