--- a/css/subgroups.main.css
+++ b/css/subgroups.main.css
@@ -10,13 +10,13 @@ body{
 *初始化链接样式
 ****
 */
-a {
+/*a {
   color: #e3722e;
 }
 a:hover {
   color: #e3722e;
   text-decoration: underline;
-}
+}*/
 
 /* banner */
 .banner{ width:100%;height:470px;overflow:hidden; overflow:hidden; position:relative; z-index:10}
@@ -71,24 +71,78 @@ a:hover {
 .vert-nav li a:hover{
   text-decoration: none;
 }
-.highlight {
-    background-color: #f7f7f9;
-    border: 1px solid #e1e1e8;
+.lightcode{
+    background-color: #272822;
+    border: 0px solid #171814;
     border-radius: 4px;
-    margin-bottom: 14px;
     padding: 9px 14px;
+    position: relative;
 }
-pre {
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
+.lightcode pre{
     border-radius: 4px;
-    color: #333;
-    display: block;
-    font-size: 13px;
-    line-height: 1.42857;
-    margin: 0 0 10px;
-    padding: 9.5px;
-    word-break: break-all;
-    word-wrap: break-word;
 }
+.scode{margin: 0;padding: 0;border: solid;}
+.lightcode .ct{color: #B92659;}
+.lightcode .cs{color: #A6E22A;}
+.lightcode .cc{color: #FFFFFF;}
+.lightcode .cv{color: #E6DB74;}
 
+/*jsCopy*/
+.lightcode .jscopy{
+	  position: absolute; 
+	  right: 0px; top: 0px;
+    width: 42px; 
+    height: 25px; 
+    line-height: 25px;
+    /*z-index: 999999999；*/
+    border: 1px solid #272822;
+    background-color: #ffffff;
+    border-radius:0 4px 0 4px;-webkit-border-radius:0 4px 0 4px;-moz-border-radius:0 4px 0 4px;
+    text-align:center;
+    font-size: 12px;
+}
+.lightcode .prompt-box{
+    position: absolute; 
+    right: -18px; top: -39px;
+    width: 90px; 
+    height: 35px; 
+/*    z-index: 9999999；*/
+    border-radius: 4px;
+    opacity: 0;
+    display: none;
+}
+.lightcode .prompt-box .prompt-box-t{
+    position: absolute; 
+    left:0px;top: 0px; 
+    width: 100px; 
+    height: 25px; 
+    line-height: 25px;
+/*    z-index: 9999999；*/
+    border-radius: 4px;
+    background-color: #272822;
+    color: #ffffff;
+    text-align:center;
+}
+.lightcode .prompt-box .prompt-box-b{
+    position: absolute; 
+    left:40px;bottom: 0px; 
+    width: 0px; 
+    height: 0px; 
+    line-height: 25px;
+/*    z-index: 9999999；*/
+    border-top:10px solid #272822;
+    border-right:10px solid #ffffff;
+/*    border-bottom:10px solid #ffffff;*/
+    border-left:10px solid #ffffff;
+}
+.lightcode .jscopy:hover{
+    color: #ffffff;
+    background-color: #483D8B;
+    border: 1px solid #483D8B;
+    cursor:pointer;
+    right: 0px; top: 0px;
+}
+.lightcode .jscopy:hover .prompt-box{
+    opacity: 1;
+    display: block;
+}
