--- a/css/subgroups.base.css
+++ b/css/subgroups.base.css
@@ -2227,6 +2227,28 @@ span.list-read{
     font-family:Verdana;
     color:#8c8c8c;
 }
+/*无序列表+序号*/
+.list .list-num li{
+	font-size:13px;
+    height:28px;
+    line-height:28px;
+    list-style: none;
+}
+.list .list-num li span.squ{
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    display: inline-block;
+    background:#ccc;
+    text-align: center;
+    color: #fff;
+    padding: 0 4px 0 3px;
+    font-size: 12px;
+    margin-right: 7px;
+}
+.list .list-num li span.hot{
+	background:#C40000;
+}
 
 /*模块头部类型*/
 .title{
